Update frgaal; set source to 24. Dependencies. Cleanup dependencies: glazed, jupiter; restore glazed javadoc link.